@@ -1,3 +1,4 @@
+* Allow to enter the loan duration in month or year, regardless of the payment frequency
 * Allow user to force loan modification even if there is another active contract using it
 
 Version 1.3 - 2015-01-22
